crates/mega-evm/tests/satin/snapshots/satin__withheld_gas__a_precompile_priced_past_the_cap_computes_nothing.snap
---
source: crates/mega-evm/tests/satin/withheld_gas.rs
expression: "&summaries(&views)"
---
{
  "an exponent of 128 bytes: a transaction from the beneficiary to the replaced modexp, gas limit 100000000": "revert MegaLimitExceeded(ComputeGas, 20000000); stop ComputeGas limit 20000000 used 0; regular 33868 state 0 history 137192 history_bytes 1559 reservoir_remaining 0 floor 94936 gas_used 171060; data_size 1559 write_records 0; logs 0 accounts 4",
  "an exponent of 128 bytes: a transaction from the beneficiary to the replaced modexp, gas limit 300000000": "revert MegaLimitExceeded(ComputeGas, 20000000); stop ComputeGas limit 20000000 used 0; regular 33868 state 0 history 137192 history_bytes 1559 reservoir_remaining 99862808 floor 94936 gas_used 171060; data_size 1559 write_records 0; logs 0 accounts 4",
  "an exponent of 128 bytes: a transaction to the replaced modexp": "success Return; stop -; regular 58721356 state 0 history 137192 history_bytes 1559 reservoir_remaining 99862808 floor 94936 gas_used 58858548; data_size 1559 write_records 0; logs 0 accounts 6",
  "an exponent of 128 bytes: the built-in modexp called, gas limit 100000000, detained": "revert MegaLimitExceeded(ComputeGas, 20000002); stop ComputeGas limit 20000002 used 369; regular 34237 state 0 history 137192 history_bytes 1559 reservoir_remaining 0 floor 94936 gas_used 171429; data_size 1559 write_records 0; logs 0 accounts 5",
  "an exponent of 128 bytes: the built-in modexp called, gas limit 100000000, plain": "success Stop; stop -; regular 58743828 state 97920 history 140712 history_bytes 1599 reservoir_remaining 0 floor 94936 gas_used 58982460; data_size 1599 write_records 1; logs 0 accounts 7",
  "an exponent of 128 bytes: the built-in modexp called, gas limit 300000000, detained": "revert MegaLimitExceeded(ComputeGas, 20000002); stop ComputeGas limit 20000002 used 369; regular 34237 state 0 history 137192 history_bytes 1559 reservoir_remaining 99862808 floor 94936 gas_used 171429; data_size 1559 write_records 0; logs 0 accounts 5",
  "an exponent of 128 bytes: the built-in modexp called, gas limit 300000000, plain": "success Stop; stop -; regular 58743828 state 97920 history 140712 history_bytes 1599 reservoir_remaining 99761368 floor 94936 gas_used 58982460; data_size 1599 write_records 1; logs 0 accounts 7",
  "an exponent of 128 bytes: the replaced modexp called, gas limit 100000000": "revert MegaLimitExceeded(ComputeGas, 20000002); stop ComputeGas limit 20000002 used 369; regular 34237 state 0 history 137192 history_bytes 1559 reservoir_remaining 0 floor 94936 gas_used 171429; data_size 1559 write_records 0; logs 0 accounts 5",
  "an exponent of 128 bytes: the replaced modexp called, gas limit 300000000": "revert MegaLimitExceeded(ComputeGas, 20000002); stop ComputeGas limit 20000002 used 369; regular 34237 state 0 history 137192 history_bytes 1559 reservoir_remaining 99862808 floor 94936 gas_used 171429; data_size 1559 write_records 0; logs 0 accounts 5",
  "an exponent of 256 bytes: a transaction from the beneficiary to the replaced modexp, gas limit 100000000": "revert MegaLimitExceeded(ComputeGas, 20000000); stop ComputeGas limit 20000000 used 0; regular 35916 state 0 history 148456 history_bytes 1687 reservoir_remaining 0 floor 103128 gas_used 184372; data_size 1687 write_records 0; logs 0 accounts 4",
  "an exponent of 256 bytes: a transaction from the beneficiary to the replaced modexp, gas limit 300000000": "revert MegaLimitExceeded(ComputeGas, 20000000); stop ComputeGas limit 20000000 used 0; regular 35916 state 0 history 148456 history_bytes 1687 reservoir_remaining 99851544 floor 103128 gas_used 184372; data_size 1687 write_records 0; logs 0 accounts 4",
  "an exponent of 256 bytes: a transaction to the replaced modexp": "success Return; stop -; regular 125832268 state 0 history 148456 history_bytes 1687 reservoir_remaining 99851544 floor 103128 gas_used 125980724; data_size 1687 write_records 0; logs 0 accounts 6",
  "an exponent of 256 bytes: the built-in modexp called, gas limit 100000000, detained": "success Stop; stop -; regular 98294134 state 0 history 148456 history_bytes 1687 reservoir_remaining 0 floor 103128 gas_used 98442590; data_size 1687 write_records 0; logs 0 accounts 6",
  "an exponent of 256 bytes: the built-in modexp called, gas limit 100000000, plain": "success Stop; stop -; regular 98294134 state 0 history 148456 history_bytes 1687 reservoir_remaining 0 floor 103128 gas_used 98442590; data_size 1687 write_records 0; logs 0 accounts 6",
  "an exponent of 256 bytes: the built-in modexp called, gas limit 300000000, detained": "revert MegaLimitExceeded(ComputeGas, 20000002); stop ComputeGas limit 20000002 used 393; regular 36309 state 0 history 148456 history_bytes 1687 reservoir_remaining 99851544 floor 103128 gas_used 184765; data_size 1687 write_records 0; logs 0 accounts 5",
  "an exponent of 256 bytes: the built-in modexp called, gas limit 300000000, plain": "success Stop; stop -; regular 125854764 state 97920 history 151976 history_bytes 1727 reservoir_remaining 99750104 floor 103128 gas_used 126104660; data_size 1727 write_records 1; logs 0 accounts 7",
  "an exponent of 256 bytes: the replaced modexp called, gas limit 100000000": "revert MegaLimitExceeded(ComputeGas, 20000002); stop ComputeGas limit 20000002 used 393; regular 36309 state 0 history 148456 history_bytes 1687 reservoir_remaining 0 floor 103128 gas_used 184765; data_size 1687 write_records 0; logs 0 accounts 5",
  "an exponent of 256 bytes: the replaced modexp called, gas limit 300000000": "revert MegaLimitExceeded(ComputeGas, 20000002); stop ComputeGas limit 20000002 used 393; regular 36309 state 0 history 148456 history_bytes 1687 reservoir_remaining 99851544 floor 103128 gas_used 184765; data_size 1687 write_records 0; logs 0 accounts 5"
}
