crates/mega-evm/tests/satin/snapshots/satin__withheld_gas__a_precompile_runs_on_the_allowance.snap
---
source: crates/mega-evm/tests/satin/withheld_gas.rs
expression: "&summaries(&views)"
---
{
  "priced 100,000 within the allowance, gas limit 100000000, detained": "success Stop; stop -; regular 19937281 state 97920 history 33616 history_bytes 382 reservoir_remaining 0 floor 17048 gas_used 20068817; data_size 382 write_records 1; logs 0 accounts 7",
  "priced 100,000 within the allowance, gas limit 100000000, plain": "success Stop; stop -; regular 19937281 state 97920 history 33616 history_bytes 382 reservoir_remaining 0 floor 17048 gas_used 20068817; data_size 382 write_records 1; logs 0 accounts 7",
  "priced 100,000 within the allowance, gas limit 300000000, detained": "success Stop; stop -; regular 19937281 state 97920 history 33616 history_bytes 382 reservoir_remaining 99868464 floor 17048 gas_used 20068817; data_size 382 write_records 1; logs 0 accounts 7",
  "priced 100,000 within the allowance, gas limit 300000000, plain": "success Stop; stop -; regular 19937281 state 97920 history 33616 history_bytes 382 reservoir_remaining 99868464 floor 17048 gas_used 20068817; data_size 382 write_records 1; logs 0 accounts 7",
  "priced at the allowance, gas limit 100000000, detained": "revert MegaLimitExceeded(ComputeGas, 20000002); stop ComputeGas limit 20000002 used 20000002; regular 20015178 state 0 history 30096 history_bytes 342 reservoir_remaining 0 floor 17048 gas_used 20045274; data_size 342 write_records 0; logs 0 accounts 5",
  "priced at the allowance, gas limit 100000000, plain": "success Stop; stop -; regular 20037281 state 97920 history 33616 history_bytes 382 reservoir_remaining 0 floor 17048 gas_used 20168817; data_size 382 write_records 1; logs 0 accounts 7",
  "priced at the allowance, gas limit 300000000, detained": "revert MegaLimitExceeded(ComputeGas, 20000002); stop ComputeGas limit 20000002 used 20000002; regular 20015178 state 0 history 30096 history_bytes 342 reservoir_remaining 99969904 floor 17048 gas_used 20045274; data_size 342 write_records 0; logs 0 accounts 5",
  "priced at the allowance, gas limit 300000000, plain": "success Stop; stop -; regular 20037281 state 97920 history 33616 history_bytes 382 reservoir_remaining 99868464 floor 17048 gas_used 20168817; data_size 382 write_records 1; logs 0 accounts 7",
  "priced one past the allowance, gas limit 100000000, detained": "revert MegaLimitExceeded(ComputeGas, 20000002); stop ComputeGas limit 20000002 used 132; regular 15308 state 0 history 30096 history_bytes 342 reservoir_remaining 0 floor 17048 gas_used 45404; data_size 342 write_records 0; logs 0 accounts 5",
  "priced one past the allowance, gas limit 100000000, plain": "success Stop; stop -; regular 20037282 state 97920 history 33616 history_bytes 382 reservoir_remaining 0 floor 17048 gas_used 20168818; data_size 382 write_records 1; logs 0 accounts 7",
  "priced one past the allowance, gas limit 300000000, detained": "revert MegaLimitExceeded(ComputeGas, 20000002); stop ComputeGas limit 20000002 used 132; regular 15308 state 0 history 30096 history_bytes 342 reservoir_remaining 99969904 floor 17048 gas_used 45404; data_size 342 write_records 0; logs 0 accounts 5",
  "priced one past the allowance, gas limit 300000000, plain": "success Stop; stop -; regular 20037282 state 97920 history 33616 history_bytes 382 reservoir_remaining 99868464 floor 17048 gas_used 20168818; data_size 382 write_records 1; logs 0 accounts 7",
  "priced past every allowance, gas limit 100000000": "revert MegaLimitExceeded(ComputeGas, 20000002); stop ComputeGas limit 20000002 used 132; regular 15308 state 0 history 30096 history_bytes 342 reservoir_remaining 0 floor 17048 gas_used 45404; data_size 342 write_records 0; logs 0 accounts 5",
  "priced past every allowance, gas limit 300000000": "revert MegaLimitExceeded(ComputeGas, 20000002); stop ComputeGas limit 20000002 used 132; regular 15308 state 0 history 30096 history_bytes 342 reservoir_remaining 99969904 floor 17048 gas_used 45404; data_size 342 write_records 0; logs 0 accounts 5"
}
