crates/mega-evm/tests/satin/snapshots/satin__withheld_gas__a_precompile_whose_input_fails_past_its_gas_check_stops_past_the_allowance.snap
---
source: crates/mega-evm/tests/satin/withheld_gas.rs
expression: "&summaries(&views)"
---
{
  "under a cap of 100,000, gas limit 100000000, detained": "revert MegaLimitExceeded(ComputeGas, 100002); stop ComputeGas limit 100002 used 240; regular 17548 state 0 history 78056 history_bytes 887 reservoir_remaining 0 floor 51928 gas_used 95604; data_size 887 write_records 0; logs 0 accounts 5",
  "under a cap of 100,000, gas limit 100000000, plain": "success Stop; stop -; regular 98363141 state 0 history 78056 history_bytes 887 reservoir_remaining 0 floor 51928 gas_used 98441197; data_size 887 write_records 0; logs 0 accounts 6",
  "under a cap of 100,000, gas limit 300000000, detained": "revert MegaLimitExceeded(ComputeGas, 100002); stop ComputeGas limit 100002 used 240; regular 17548 state 0 history 78056 history_bytes 887 reservoir_remaining 99921944 floor 51928 gas_used 95604; data_size 887 write_records 0; logs 0 accounts 5",
  "under a cap of 100,000, gas limit 300000000, plain": "success Stop; stop -; regular 196877478 state 0 history 78056 history_bytes 887 reservoir_remaining 99921944 floor 51928 gas_used 196955534; data_size 887 write_records 0; logs 0 accounts 6",
  "under the spec's cap, gas limit 100000000, detained": "success Stop; stop -; regular 98363141 state 0 history 78056 history_bytes 887 reservoir_remaining 0 floor 51928 gas_used 98441197; data_size 887 write_records 0; logs 0 accounts 6",
  "under the spec's cap, gas limit 100000000, plain": "success Stop; stop -; regular 98363141 state 0 history 78056 history_bytes 887 reservoir_remaining 0 floor 51928 gas_used 98441197; data_size 887 write_records 0; logs 0 accounts 6",
  "under the spec's cap, gas limit 300000000, detained": "success Stop; stop -; regular 196877478 state 0 history 78056 history_bytes 887 reservoir_remaining 99921944 floor 51928 gas_used 196955534; data_size 887 write_records 0; logs 0 accounts 6",
  "under the spec's cap, gas limit 300000000, plain": "success Stop; stop -; regular 196877478 state 0 history 78056 history_bytes 887 reservoir_remaining 99921944 floor 51928 gas_used 196955534; data_size 887 write_records 0; logs 0 accounts 6"
}
