crates/mega-evm/tests/satin/snapshots/satin__withheld_gas__a_priced_precompile_within_the_allowance_runs_as_without_the_read.snap
---
source: crates/mega-evm/tests/satin/withheld_gas.rs
expression: "&views"
---
{
  "gas limit 100000000, detained": {
    "result": {
      "kind": "success",
      "reason": "Stop",
      "output": "0x",
      "created": null,
      "logs": []
    },
    "gas": {
      "regular": 8410759,
      "state": 97920,
      "history": 135080,
      "history_bytes": 1535,
      "reservoir_remaining": 0,
      "floor": 90840,
      "gas_used": 8643759
    },
    "result_gas": {
      "total_gas_spent": 8643759,
      "state_gas_spent": 97920,
      "refunded": 0,
      "floor_gas": 90840,
      "reservoir_remaining": 0
    },
    "usage": {
      "data_size": 1535,
      "write_records": 1
    },
    "limit_stop": null,
    "oracle_reads": [],
    "accounts": {
      "0x0000000000000000000000000000000000000005": "unchanged",
      "0x0000000000000000000000000000000000bef000": "unchanged",
      "0x0000000000000000000000000000000000d00000": {
        "balance": "0x0",
        "nonce": 1,
        "code_hash": "0xc5d2460186f7233c927e7db2dcc703c0e500b653ca82273b7bfad8045d85a470",
        "created": false,
        "selfdestructed": false,
        "storage": []
      },
      "0x0000000000000000000000000000000000d00001": {
        "balance": "0x0",
        "nonce": 0,
        "code_hash": "0x4054a3cc484c5c83613599785d37d2638b8e687b8a6f2ed28928b0040f3543fa",
        "created": false,
        "selfdestructed": false,
        "storage": [
          {
            "slot": "0x0",
            "original": "0x0",
            "present": "0x1"
          }
        ]
      },
      "0x4200000000000000000000000000000000000019": "unchanged",
      "0x420000000000000000000000000000000000001a": "unchanged",
      "0x420000000000000000000000000000000000001b": "unchanged"
    }
  },
  "gas limit 100000000, plain": {
    "result": {
      "kind": "success",
      "reason": "Stop",
      "output": "0x",
      "created": null,
      "logs": []
    },
    "gas": {
      "regular": 8410759,
      "state": 97920,
      "history": 135080,
      "history_bytes": 1535,
      "reservoir_remaining": 0,
      "floor": 90840,
      "gas_used": 8643759
    },
    "result_gas": {
      "total_gas_spent": 8643759,
      "state_gas_spent": 97920,
      "refunded": 0,
      "floor_gas": 90840,
      "reservoir_remaining": 0
    },
    "usage": {
      "data_size": 1535,
      "write_records": 1
    },
    "limit_stop": null,
    "oracle_reads": [],
    "accounts": {
      "0x0000000000000000000000000000000000000005": "unchanged",
      "0x0000000000000000000000000000000000bef000": "unchanged",
      "0x0000000000000000000000000000000000d00000": {
        "balance": "0x0",
        "nonce": 1,
        "code_hash": "0xc5d2460186f7233c927e7db2dcc703c0e500b653ca82273b7bfad8045d85a470",
        "created": false,
        "selfdestructed": false,
        "storage": []
      },
      "0x0000000000000000000000000000000000d00001": {
        "balance": "0x0",
        "nonce": 0,
        "code_hash": "0x5d4e242a04b32f18dea275d6507830c0d1b5f35b1c78f727647debd789ba507a",
        "created": false,
        "selfdestructed": false,
        "storage": [
          {
            "slot": "0x0",
            "original": "0x0",
            "present": "0x1"
          }
        ]
      },
      "0x4200000000000000000000000000000000000019": "unchanged",
      "0x420000000000000000000000000000000000001a": "unchanged",
      "0x420000000000000000000000000000000000001b": "unchanged"
    }
  },
  "gas limit 300000000, detained": {
    "result": {
      "kind": "success",
      "reason": "Stop",
      "output": "0x",
      "created": null,
      "logs": []
    },
    "gas": {
      "regular": 8410759,
      "state": 97920,
      "history": 135080,
      "history_bytes": 1535,
      "reservoir_remaining": 99767000,
      "floor": 90840,
      "gas_used": 8643759
    },
    "result_gas": {
      "total_gas_spent": 8643759,
      "state_gas_spent": 97920,
      "refunded": 0,
      "floor_gas": 90840,
      "reservoir_remaining": 99767000
    },
    "usage": {
      "data_size": 1535,
      "write_records": 1
    },
    "limit_stop": null,
    "oracle_reads": [],
    "accounts": {
      "0x0000000000000000000000000000000000000005": "unchanged",
      "0x0000000000000000000000000000000000bef000": "unchanged",
      "0x0000000000000000000000000000000000d00000": {
        "balance": "0x0",
        "nonce": 1,
        "code_hash": "0xc5d2460186f7233c927e7db2dcc703c0e500b653ca82273b7bfad8045d85a470",
        "created": false,
        "selfdestructed": false,
        "storage": []
      },
      "0x0000000000000000000000000000000000d00001": {
        "balance": "0x0",
        "nonce": 0,
        "code_hash": "0x4054a3cc484c5c83613599785d37d2638b8e687b8a6f2ed28928b0040f3543fa",
        "created": false,
        "selfdestructed": false,
        "storage": [
          {
            "slot": "0x0",
            "original": "0x0",
            "present": "0x1"
          }
        ]
      },
      "0x4200000000000000000000000000000000000019": "unchanged",
      "0x420000000000000000000000000000000000001a": "unchanged",
      "0x420000000000000000000000000000000000001b": "unchanged"
    }
  },
  "gas limit 300000000, plain": {
    "result": {
      "kind": "success",
      "reason": "Stop",
      "output": "0x",
      "created": null,
      "logs": []
    },
    "gas": {
      "regular": 8410759,
      "state": 97920,
      "history": 135080,
      "history_bytes": 1535,
      "reservoir_remaining": 99767000,
      "floor": 90840,
      "gas_used": 8643759
    },
    "result_gas": {
      "total_gas_spent": 8643759,
      "state_gas_spent": 97920,
      "refunded": 0,
      "floor_gas": 90840,
      "reservoir_remaining": 99767000
    },
    "usage": {
      "data_size": 1535,
      "write_records": 1
    },
    "limit_stop": null,
    "oracle_reads": [],
    "accounts": {
      "0x0000000000000000000000000000000000000005": "unchanged",
      "0x0000000000000000000000000000000000bef000": "unchanged",
      "0x0000000000000000000000000000000000d00000": {
        "balance": "0x0",
        "nonce": 1,
        "code_hash": "0xc5d2460186f7233c927e7db2dcc703c0e500b653ca82273b7bfad8045d85a470",
        "created": false,
        "selfdestructed": false,
        "storage": []
      },
      "0x0000000000000000000000000000000000d00001": {
        "balance": "0x0",
        "nonce": 0,
        "code_hash": "0x5d4e242a04b32f18dea275d6507830c0d1b5f35b1c78f727647debd789ba507a",
        "created": false,
        "selfdestructed": false,
        "storage": [
          {
            "slot": "0x0",
            "original": "0x0",
            "present": "0x1"
          }
        ]
      },
      "0x4200000000000000000000000000000000000019": "unchanged",
      "0x420000000000000000000000000000000000001a": "unchanged",
      "0x420000000000000000000000000000000000001b": "unchanged"
    }
  }
}
